# PasswordManager

./: .clang-format  CMakeLists.txt  Readme.md
include/: crypto.h  db_connection.h  db_create.h  db_users.h  random.h  sql_commands.h  test.h  types.h
src/: crypto.c  main.c  pwd_gen_final.c  random.c  test.c
src/Random_pwd_generator/: code.c
src/database/: db_connection.c  db_create.c  db_users.c
